--- a/Analysis_Work/Adjusting_play_by_play_data.qmd
+++ b/Analysis_Work/Adjusting_play_by_play_data.qmd
@@ -22,11 +22,9 @@ perSet <- read.csv("data/per_set_statsNew.csv")
 newPlayByPlay <- playByPlay %>%
   mutate(ace = grepl("ace", play_descripton, ignore.case = TRUE),
          error = grepl("error", play_descripton, ignore.case = TRUE),
-         kill = grepl("kill", play_descripton, ignore.case = TRUE),
-         timeout = grepl("timeout", play_descripton, ignore.case = TRUE),
-         subs = grepl("subs", play_descripton, ignore.case = TRUE))
-#newPlayByPlay <- playByPlay %>%
-  #filter(timeout != TRUE)
+         kill = grepl("kill", play_descripton, ignore.case = TRUE))
+newPlayByPlay <- newPlayByPlay %>% 
+  filter(ace == TRUE | error == TRUE | kill == TRUE)
 
 # Convert 'ace', 'error', and 'kill' columns to binary indicators (1 if true, 0 if false)
 newPlayByPlay$ace_indicator <- as.numeric(newPlayByPlay$ace)
@@ -34,18 +32,6 @@ newPlayByPlay$error_indicator <- as.numeric(newPlayByPlay$error)
 newPlayByPlay$kill_indicator <- as.numeric(newPlayByPlay$kill)
 
 ```
-
-p(s\|madebias) \<- made given that previous was made
-
-1 - p(s\|madebias) \<- missed given that previous was made
-
-p(s\|missedbias) \<- made given that previous was missed
-
-1 - p(s\|missedbias) \<- missed given that previous was missed
-
-p(s\|N) \<- made given neutral
-
-1 - p(s\|N) \<- missed given neutral
 
 ```{r}
 # Add new columns to the existing data
@@ -87,7 +73,8 @@ adjusted_data <- newPlayByPlay %>%
 
 ```{r}
 adjusted_data <- adjusted_data %>%
-  group_by(point_scored, prev_point_scored, Date, Site, set) %>%
+  group_by(point_scored, prev_point_scored) %>%
+  
   tally()
 ```
 
@@ -104,21 +91,65 @@ adjusted_data <- adjusted_data %>%
 
 ```
 
-```{r}
-loglik <- function(x, na.abias, a.abias, na.nabias, a.nabias, a.n, na.n)
-{ps.n = x[1]  
-  ps.abias = x[2] 
-  ps.nabias = x[3] 
-  loglik = na.n*log(ps.n) + na.n*log(1-ps.n) + 
-    ns.sbias*log(ps.sbias) + nm.sbias*log(1-ps.sbias) + 
-    ns.mbias*log(ps.mbias) + nm.mbias*log(1-ps.mbias)   
-  return(-loglik) 
+```{r, warning=FALSE}
+loglik <- function(x, a.abias, na.abias, a.ebias, na.ebias, a.obias, na.obias, e.abias, ne.abias, e.ebias, ne.ebias, e.obias, ne.obias, o.abias, no.abias, o.ebias, no.ebias, o.obias, no.obias)
+{ # x is a vector containing the parameter values
+  ps.obias = x[1]  # pb.n is the first entry of x
+  ps.abias = x[2] # pb.bbias is the second entry of x
+  ps.ebias = x[3] # pb.gbias is the third entry of x'
+  
+  loglik = a.abias*log(ps.abias)+na.abias*log(1-ps.abias) + 
+    e.abias*log(ps.abias) + ne.abias*log(1-ps.abias) + 
+    o.abias*log(ps.abias) + no.abias*log(1-ps.abias) + 
+    a.ebias*log(ps.ebias)+na.ebias*log(1-ps.ebias) + 
+    e.ebias*log(ps.ebias) + ne.ebias*log(1-ps.ebias) + 
+    o.ebias*log(ps.ebias) + no.ebias*log(1-ps.ebias) + 
+    a.obias*log(ps.obias)+na.obias*log(1-ps.obias) + 
+    e.obias*log(ps.obias) + ne.abias*log(1-ps.obias) + 
+    o.obias*log(ps.obias) + no.ebias*log(1-ps.obias)
+  
+  return(-loglik) # optim is a minimization function (so need to give is negative log likelihood)
 }
 
-# optim is a minimization function (so need to give is negative log likelihood)
 optim(par = c(.5,.5,.5), # equally likely to be boy girl or neutral
-      loglik.mod2,ns.n = 29, nm.n = 29,
-      ns.sbias = 197, nm.sbias = 246,
-      ns.mbias = 244, nm.mbias = 223, 
+      loglik,
+      a.abias = (adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "ace"))$n,
+      na.abias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "ace"))$n),
+      e.abias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "ace"))$n),
+      ne.abias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "ace"))$n),
+      no.abias = sum((adjusted_data %>% filter(point_scored != "other" & prev_point_scored == "ace"))$n),
+      o.abias = sum((adjusted_data %>% filter(point_scored == "other" & prev_point_scored == "ace"))$n),
+      a.ebias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "error"))$n),
+      na.ebias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "error"))$n),
+      e.ebias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "error"))$n),
+      ne.ebias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "error"))$n),
+      o.ebias = sum((adjusted_data %>% filter(point_scored == "other" & prev_point_scored == "error"))$n),
+      no.ebias = sum((adjusted_data %>% filter(point_scored != "other" & prev_point_scored == "error"))$n),
+      a.obias = sum((adjusted_data %>% filter(point_scored == "ace" & prev_point_scored == "other"))$n),
+      na.obias = sum((adjusted_data %>% filter(point_scored != "ace" & prev_point_scored == "other"))$n),
+      e.obias = sum((adjusted_data %>% filter(point_scored == "error" & prev_point_scored == "other"))$n),
+      ne.obias = sum((adjusted_data %>% filter(point_scored != "error" & prev_point_scored == "other"))$n),
+      o.obias = sum((adjusted_data %>% filter(point_scored == "other" & prev_point_scored == "other"))$n),
+      no.obias = sum((adjusted_data %>% filter(point_scored != "other" & prev_point_scored == "other"))$n),
       method="BFGS")
+
+```
+
+```{r, warning=FALSE}
+loglik <- function(x, a.abias, a.obias, na.abias, na.obias)
+{ # x is a vector containing the parameter values
+  ps.obias = x[1]  # the first entry of x
+  ps.abias = x[2] # the second entry of x
+  
+  loglik = a.abias*log(ps.abias)+na.abias*log(1-ps.abias) + 
+    a.obias*log(ps.obias) + na.obias*log(1-ps.obias)
+  return(-loglik) # optim is a minimization function (so need to give is negative log likelihood)
+}
+
+optim(par = c(.5,.5,.5), 
+      loglik, a.abias = 4830, na.abias = (6211+7729),
+      a.obias = (5851 + 8074), na.obias = (20336 + 25422 + 25784 + 35756),
+      method="BFGS")
+
+
 ```
